# Alijna

./: .gitignore  README.md  SPEC.md  main.py  pyproject.toml
assets/memevolve/: architecture.html  implementation_plan.md  revised_implementation_plan.md  walkthrough.md
experiment/: 0_create_agent.ipynb  1_todo.ipynb  2_files.ipynb  3_subagents.ipynb  4_full_agent.ipynb
src/: run_flash_searcher_mm_gaia.py  run_flash_searcher_webwalkerqa.py
src/EvolveLab/: __init__.py  base_memory.py  config.py  memory_types.py
src/EvolveLab/providers/: __init__.py  agent_kb_provider.py  agent_workflow_memory_provider.py  base_provider_template.py  cerebra_fusion_memory_provider.py  dilu_memory_provider.py  dynamic_cheatsheet_provider.py  evolver_memory_provider.py  expel_provider.py  generative_memory_provider.py  lightweight_memory_provider.py  memp_memory_provider.py  mobilee_provider.py  skillweaver_provider.py  voyager_memory_provider.py
src/Flash_Searcher/: .gitignore  README.md  analysis_agent.py  base_agent.py  lasj.py  pyproject.toml  requirements.txt  run_flash_searcher.py  run_flash_searcher.sh  run_flash_searcher_mm.py  utils.py
src/Flash_Searcher/FlashOAgents/: __init__.py  _function_type_hints_utils.py  agent_types.py  agents.py  memory.py  mm_tools.py  mm_tools_utils.py  models.py  monitoring.py  search_tools.py  tools.py  utils.py
src/Flash_Searcher/FlashOAgents/prompts/default/: toolcalling_agent.yaml
src/Flash_Searcher/FlashOAgents/prompts/generation/: toolcalling_agent.yaml
src/Flash_Searcher/data/: example.jsonl
src/Flash_Searcher/model_eval/: infer_tools.py  model_infer.py  model_parallel_infer.py
src/MemEvolve/: __init__.py  config.py
src/MemEvolve/core/: __init__.py  auto_evolver.py  memory_evolver.py
src/MemEvolve/phases/: __init__.py  memory_creator.py  phase_analyzer.py  phase_generator.py  phase_validator.py
src/MemEvolve/prompts/: analysis_prompt.yaml  generation_prompt.yaml
src/MemEvolve/utils/: __init__.py  metrics_heavy.py  run_provider.py  trajectory_tools.py
src/MemEvolve/validators/: __init__.py  swe_agent_validator.py
src/deep_agents_from_scratch/: __init__.py  cli.py  evolve_cli.py  research_tools.py  state.py  task_tool.py  todo_tools.py  utils.py
src/deep_agents_from_scratch/adapter/: memory_adapter.py
